tutorial/level_1/M4_networking_routes/3_tls_certificates/manifests/deployment-tls.yaml
# Deployment for a TLS-enabled NGINX backend
# Mounts TLS certificates from a Secret and a custom NGINX config from a ConfigMap
# Used by passthrough and re-encrypt Routes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tls-demo-passthrough
  labels:
    app: tls-demo-passthrough
    tutorial-level: "1"
    tutorial-module: "M4"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tls-demo-passthrough
  template:
    metadata:
      labels:
        app: tls-demo-passthrough
        tutorial-level: "1"
        tutorial-module: "M4"
    spec:
      containers:
        - name: nginx
          image: registry.access.redhat.com/ubi9/nginx-122:latest
          ports:
            - containerPort: 8443
              protocol: TCP
          command:
            - nginx
            - -c
            - /etc/nginx/conf.d/nginx.conf
            - -g
            - "daemon off;"
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/nginx/tls
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: tls-demo-passthrough-cert
        - name: nginx-config
          configMap:
            name: nginx-tls-config
