tutorial/level_1/M4_networking_routes/3_tls_certificates/manifests/deployment.yaml
# Deployment for a simple HTTP application (NGINX on port 8080)
# Used as the backend for edge-terminated TLS Routes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tls-demo
  labels:
    app: tls-demo
    tutorial-level: "1"
    tutorial-module: "M4"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tls-demo
  template:
    metadata:
      labels:
        app: tls-demo
        tutorial-level: "1"
        tutorial-module: "M4"
    spec:
      containers:
        - name: nginx
          image: registry.access.redhat.com/ubi9/nginx-122:latest
          ports:
            - containerPort: 8080
              protocol: TCP
