tutorial/level_1/M4_networking_routes/3_tls_certificates/manifests/route-reencrypt.yaml
# Re-encrypt Route -- the router terminates the external TLS connection,
# then opens a NEW TLS connection to the backend pod
# This provides end-to-end encryption with certificate validation at the router
#
# Replace certificate, key, caCertificate, and destinationCACertificate
# with actual PEM data, or use: oc create route reencrypt --cert --key --ca-cert --dest-ca-cert
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tls-demo-reencrypt
  labels:
    app: tls-demo-passthrough
    tutorial-level: "1"
    tutorial-module: "M4"
spec:
  host: tls-demo-reencrypt-tls-demo.apps-crc.testing
  to:
    kind: Service
    name: tls-demo-passthrough
  port:
    targetPort: 8443
  tls:
    termination: reencrypt
    certificate: |
      -----BEGIN CERTIFICATE-----
      <paste contents of certs/server.crt here>
      -----END CERTIFICATE-----
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      <paste contents of certs/server.key here>
      -----END RSA PRIVATE KEY-----
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      <paste contents of certs/ca.crt here>
      -----END CERTIFICATE-----
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      <paste contents of certs/ca.crt here -- this CA verifies the backend pod's cert>
      -----END CERTIFICATE-----
